--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
 </head>
 <body>
 <div id="pojemnik">
@@ -19,6 +20,8 @@
 	</div>
 	
 	<div class="clear"></div>
+	
+	
 	
 <script src="js/main.js"></script>
 </body>
