--- a/index.html
+++ b/index.html
@@ -8,21 +8,13 @@
 </head>
 <body>
 <div id="pojemnik">
-	<div id="plansza">
-	
-	</div>
-	
+	<div id="plansza"></div>
 	<div id="szubienica">
 		<img src="image/s0.jpg" alt="">
 	</div>
-	
-	<div id="alfabet">
-	</div>
-	
+	<div id="alfabet"></div>
 	<div class="clear"></div>
-	
-	
-	
+  </div>
 <script src="js/main.js"></script>
 </body>
 </html>
